--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ical-api"
-version = "0.1.2"
+version = "0.1.3"
 description = "Calendar subscription api"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -135,3 +135,7 @@ ignore_missing_imports = true
 follow_untyped_imports = true
 
 [tool.pytest.ini_options]
+
+[tool.isort]
+profile = "hug"
+src_paths = ["ical_api"]
